# aedile-ndk

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  gen_deb.sh  maintainers.yaml  vcpkg-configuration.json  vcpkg.json
deb/DEBIAN/: control
debian/: control  pack.sh
include/: bech32.hpp  nostr.h  nostr.hpp  nostr_service_base.hpp
include/client/: web_socket_client.hpp  websocketpp_client.hpp
include/cryptography/: noscrypt_cipher.hpp
include/data/: data.hpp
include/service/: nostr_service.hpp  nostr_service_base.hpp  nostr_service_specializations.hpp
include/signer/: noscrypt_signer.hpp  signer.hpp
scripts/: bech.py  bech32.py  bech32_nostr.py
src/: bech32.cpp  event.cpp  filters.cpp  nostr_service.cpp  nostr_service_base.cpp
src/client/: websocketpp_client.cpp
src/cryptography/: noscrypt_cipher.cpp  noscrypt_cipher.hpp  nostr_secure_rng.cpp  nostr_secure_rng.hpp
src/data/: event.cpp  filters.cpp  test_scenarios.md
src/internal/: noscrypt_logger.cpp  noscrypt_logger.hpp
src/service/: console_websocketpp_noscrypt.cpp  nostr_service.cpp  nostr_service_base.cpp
src/signer/: noscrypt_cipher.cpp  noscrypt_cipher.hpp  noscrypt_signer.cpp  test_scenarios.md
test/: CMakeLists.txt  bech32_test.cpp  nostr_event_test.cpp  nostr_service_base_test.cpp  nostr_service_test.cpp
